[project]
name = "unfold-studio"
version = "1.0.0"
description = "Web application for interactive storytelling"
license = { text = "MIT" }
authors = [
    { name = "Chris Proctor", email = "chris@chrisproctor.net>"}
]
maintainers = [
    { name = "Chris Proctor", email = "chris@chrisproctor.net>"}
]
readme = "README.md"
keywords = [
    "interactive storytelling", 
    "ink", 
    "computer science education"
]
requires-python = ">=3.12"
dependencies = [
    "django >= 5.0.6",
    "django-storages >= 1.14.3",
    "django-reversion >= 5.0.12",
    "django-cors-headers >= 4.4.0",
    "django-extensions >= 3.2.3",
    "social-auth-app-django >= 5.4.1",
    "django-qr-code >= 4.1.0",
    "arrow >= 1.3.0",
    "psycopg >= 3.1.19",
    "boto3 >= 1.34.131",
    "openai >= 1.35.13",
    "django-structlog >= 9.0.0",
    "pytz >= 2024.2",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[project.urls]
homepage = "https://unfoldstudio.net/"
repository = "https://github.com/cproctor/unfold_studio"
documentation = "https://unfoldstudio.net/user-guide/"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.admin]
optional = true

[tool.poetry.group.admin.dependencies]
tabulate = ">=0.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = ">=4.4.2"
pytest = ">=8.0.0"
pytest-django = ">=4.8.0"
selenium = ">=4.18.1"
webdriver-manager = ">=4.0.1"
sentence-transformers = ">= 2.5.1"
numpy = ">= 1.26.0"
django-silk = ">= 5.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
